fix(dispute): double scroll bar
Fixes #70

--- a/src/containers/dispute/dispute.scss
+++ b/src/containers/dispute/dispute.scss
@@ -1,6 +1,7 @@
 /* @define Dispute */
 .Dispute {
   height: 100%;
+  overflow-y: hidden;
   padding: 28px 15%;
   width: 100%;
 
